<resources>
    <string name="app_name">ViewsDTETI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_location">Location Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_sensor_is_reading">Your sensor is reading...</string>
    <string name="sensor_x">X: 0.00</string>
    <string name="sensor_y">Y: 0.00</string>
    <string name="sensor_z">Z: 0.00</string>
    <string name="sensor_menu_title">Sensor</string>
</resources>