<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_sensor"
        android:icon="@drawable/ic_sensor_black_24dp"
        android:title="@string/sensor_menu_title" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_black_24dp"
        android:title="@string/title_location" />

</menu>