<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/sensorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_sensor_is_reading"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sensorCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/sensorTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/xValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_x"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/yValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_y"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/zValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_z"
                android:textSize="18sp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sensorCard2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/sensorCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">



            <TextView
                android:id="@+id/xValue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_x"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/yValue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_y"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/zValue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_z"
                android:textSize="18sp"/>
=
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sensorCard3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/sensorCard2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/xValue3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_x"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/yValue3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_y"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/zValue3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_z"
                android:textSize="18sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>